# ChangeLog for app-crypt/gpgme
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/gpgme/ChangeLog,v 1.154 2009/03/07 23:50:42 dragonheart Exp $

*gpgme-1.1.8-r1 (07 Mar 2009)

  07 Mar 2009; Daniel Black <dragonheart@gentoo.org>
  -files/gpgme-1.1.7-_gpgme_cancel_with_err.patch,
  +files/gpgme-1.1.8-et_EE.patch, -gpgme-1.1.5.ebuild, -gpgme-1.1.7.ebuild,
  -gpgme-1.1.8.ebuild, +gpgme-1.1.8-r1.ebuild:
  fix for bug #242332 gpgme-config script fails with et_EE locale. thanks step
  for the report and Harald van Dijk for isolating the problem. Cleanout old
  stuff too

*gpgme-1.1.8 (03 Jan 2009)

  03 Jan 2009; Daniel Black <dragonheart@gentoo.org> +gpgme-1.1.8.ebuild:
  version bump. patch and ebuild cleanup by Arfrever in bug #253616

*gpgme-1.1.7 (03 Jan 2009)

  03 Jan 2009; Daniel Black <dragonheart@gentoo.org>
  +files/gpgme-1.1.7-_gpgme_cancel_with_err.patch, +gpgme-1.1.7.ebuild:
  version bump. patch and ebuild cleanup byArfrever in bug #242572

  17 Nov 2008; Diego E. Pettenò <flameeyes@gentoo.org>
  files/gpgme3.m4.patch:
  Fix patch to apply.

  31 Aug 2008; Daniel Black <dragonheart@gentoo.org> gpgme-0.3.14-r2.ebuild:
  remove m4/libtool.m4 as suggested by Rafal in bug #226461

  24 Jul 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  24 Mar 2008; Raúl Porcel <armin76@gentoo.org> gpgme-1.1.6.ebuild:
  alpha/ia64/sparc stable wrt #205998

  22 Mar 2008; Alon Bar-Lev <alonbl@gentoo.org> gpgme-1.1.6.ebuild:
  Add m4 dir to include, bug#214290, thanks to forlk

  22 Mar 2008; Jeroen Roovers <jer@gentoo.org> gpgme-1.1.6.ebuild:
  Stable for HPPA (bug #205998).

  22 Mar 2008; Brent Baude <ranger@gentoo.org> gpgme-1.1.6.ebuild:
  stable ppc64, bug 205998

  22 Mar 2008; nixnut <nixnut@gentoo.org> gpgme-1.1.6.ebuild:
  Stable on ppc wrt bug 205998

  21 Mar 2008; Markus Meier <maekke@gentoo.org> gpgme-1.1.6.ebuild: