@@ -3,7 +3,7 @@ AUX gpgme-1.1.6-darwin.patch 360 RMD160 8d7cb352a44eff5b2053ba194ed40bb553b8c973
 AUX gpgme-1.1.8-et_EE.patch 356 RMD160 6ea6ff37a428ececc30e2535793a56540f3c4219 SHA1 6ecf74e97f14b39959f2952a26389977a1843b87 SHA256 dcf67057447f1f6316ebad2b61340bc24086eb470a9cb68cababcb709b329e7b
 DIST gpgme-1.1.6.tar.gz 961286 RMD160 b761fed5ad88ef4b467c981bcc0ef95317c11ac1 SHA1 8dee551f362fc428c25c9bd542ce944ac916347d SHA256 7cf6cd9dfc1f02488eab8cb8a64d3904c71df9a04b1e9614beeec72dbde3f49f
 DIST gpgme-1.1.8.tar.gz 1085576 RMD160 6ee8856956cc8082fd19da457456b84d21d94841 SHA1 5f119d57009f1b8682d7665ae985325d0885ec9b SHA256 a7f276a6d21b9fef471a3c734d8be5a04ba8364a4d239e437aa137ce18b0afd8
-EBUILD gpgme-1.1.6.ebuild 1258 RMD160 ac7c399b13904c670216cbe9ef62379dbfd16239 SHA1 8ea595b13370244fdfa517ba96e33e7acb4595ac SHA256 4e7b61e03970583aa5d21ede56e309e4e4c53f5a81415d96aa2eb638cce6042e
+EBUILD gpgme-1.1.6.ebuild 1318 RMD160 513dbc35c3d38fdb4c5e7bc96e01ddbcff7367df SHA1 387fa40b86f59d5f4547aef0effe65b46a131dd5 SHA256 33df2510192f27abdfed4f0ac237778b30529936279e1572d13b2d6e8e0417b2
 EBUILD gpgme-1.1.8-r1.ebuild 1276 RMD160 006ced6cd798151ce60e86d512893d4ef0afb33b SHA1 69989935c1fc9a84ca14aaaf1e570e9abe54253f SHA256 18a07672340ea8fae912cf760eeddab747823878ce8b9e771ec0ad456fcbe434
-MISC ChangeLog 22361 RMD160 c1715891d2856b2db34d168438614a1b3d6d43f8 SHA1 a07e4079ca5a679b0f65237e9335aabe8e76b8f1 SHA256 2740fb7ad4f1700137141fcdf83435e732550bdbddd567bf38a46dd557223aaa
+MISC ChangeLog 22458 RMD160 f4ef36528f4a842a3de8730f38c2648dbe67b431 SHA1 f67c842d37b735f218642f78d3c9ab1724259cac SHA256 c7a3aad05a6d625e9c0f230120e3a80d367beb3039936d30f97c07923c318148
 MISC metadata.xml 421 RMD160 6467db2a7ffb640a07bbfb5137c271663ac8613f SHA1 c20459466b39b55995cd1a6bfe4709eb26f2203f SHA256 dc6e832b4e73e3346166e39067104fe27dd0da8569d471958ff1851111cf950b
