@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/gpgme
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/gpgme/ChangeLog,v 1.154 2009/03/07 23:50:42 dragonheart Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/gpgme/ChangeLog,v 1.155 2009/03/17 08:17:29 dragonheart Exp $
+
+  17 Mar 2009; Daniel Black <dragonheart@gentoo.org> gpgme-1.1.6.ebuild:
+  backport et_EE patch
 
 *gpgme-1.1.8-r1 (07 Mar 2009)
 
